--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 <p><strong>Email:</strong> coraruiznf@gmail.com</p>
 <p><strong>Phone:</strong> 203-482-9185</p>
 <div class="linkedin-section">
-    <p><a herf="https://www.linkedin.com/in/cora-ruiz-24b0b5236?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target=">Connect with me on Linkedin!</a></p>
-
+            <p><a href="https://www.linkedin.com/in/cora-ruiz-24b0b5236?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">Connect with me on LinkedIn!</a></p>
 
     
 </body>
