--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <p>Hello! My name is Cora Ruiz. I am a first-year Ph.D. student in Electrical Engineering at the City College of New York. I hold a Bachelor's degree in Cybersecurity with a concentration in Criminal Justice from Albertus Magnus College. My research interests include internet safety and privacy, particularly as it pertains to vulnerable populations such as children and the elderly.</p>
 
 <h2><strong>Contact Information</strong></h2>
-<p><strong>Email:</strong> coraruiznf@gmail.com</p>
-<p><strong>Phone:</strong> 203-482-9185</p>
+<p><strong>Email:</strong> 
+cruiz13 (at) citymail (dot) cuny (dot) edu</p>
 <div class="linkedin-section">
             <p><a href="https://www.linkedin.com/in/cora-ruiz-24b0b5236?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">Connect with me on LinkedIn!</a></p>
 
